--- a/css/style.css
+++ b/css/style.css
@@ -48,3 +48,15 @@ section{
 text-align: center;
 padding-top: 40px;
 }
+footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    background-color: black;
+    color: white;
+}
+footer h3{
+    text-align: center;
+    font-size: 20px;
+}
