--- a/css/style.css
+++ b/css/style.css
@@ -11,14 +11,15 @@ h1 {
   font-size: 40px;
   color:white;
   padding: 30px;
-  border-bottom: 2px solid whitesmoke;
   background-color: black;
+  margin-bottom: 0px;
 }
 h2{
     text-align: center;
     font-size: 30px;
     margin: 20px;
     padding: 20px;
+    background-color: aqua;
 }
 nav {
   display: flex;
@@ -26,8 +27,8 @@ nav {
   padding: 0px;
   text-decoration: none;
   list-style: none;
-  border-radius: 10px;
   background-color:gainsboro;
+  margin: 0px;
 }
 #navbarNavAltMarkup{
     color: white;
