--- a/css/style.css
+++ b/css/style.css
@@ -3,21 +3,19 @@
   padding: 0;
 }
 body {
-  background-color: white;
+  background-color: white ;
 }
 h1 {
   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-align: center;
   font-size: 40px;
-  color:white;
+  color:black;
   padding: 30px;
   background-color: black;
-  margin-bottom: 0px;
 }
 h2{
     text-align: center;
     font-size: 30px;
-    margin: 20px;
     padding: 20px;
     background-color: aqua;
 }
