--- a/css/style.css
+++ b/css/style.css
@@ -3,27 +3,30 @@
   padding: 0;
 }
 body {
-  background-color: white ;
+  background-color: white;
 }
 h1 {
-  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   text-align: center;
   font-size: 40px;
-  color:black;
+  color: black;
   padding: 30px;
   background-color: black;
 }
-h3{
-    text-align: center;
-    font-size: 20px;
-    padding: 10px;
+h3 {
+  text-align: center;
+  font-size: 20px;
+  padding: 10px;
+  margin: 0px 33% 0px 33%;
+  border-bottom: 2px solid black;
 }
-.descripcion{
-    margin: 0px;
-    padding-top: 2rem;
+.descripcion {
+  margin: 0px;
+  padding-top: 2rem;
 }
-.descripcion p{
-    font-size: medium;
+.descripcion p {
+  font-size: medium;
 }
 nav {
   display: flex;
@@ -31,51 +34,51 @@ nav {
   padding: 0px;
   text-decoration: none;
   list-style: none;
-  background-color:gainsboro;
+  background-color: gainsboro;
   margin: 0px;
 }
-#navbarNavAltMarkup{
-    color: white;
+#navbarNavAltMarkup {
+  color: white;
 }
 #carouselExample {
   margin: 30px;
   padding: 30px;
 }
-.card{
-    display:flex;
-    align-items: baseline;
+.card {
+  display: flex;
+  align-items: baseline;
 }
-article{
-    margin: 10px;
-    padding: 10px;
-    display: inline-block;
+article {
+  margin: 10px;
+  padding: 10px;
+  display: inline-block;
 }
-section{
-text-align: center;
-padding-top: 40px;
-margin-bottom: 40px;
+section {
+  text-align: center;
+  padding-top: 40px;
+  margin-bottom: 40px;
 }
-#informacion{
+#informacion {
   padding-top: 80px;
 }
-footer{
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-    background-color: black;
-    color: white;
+footer {
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  background-color: black;
+  color: white;
 }
-footer h3{
-    text-align: center;
-    font-size: 20px;
+footer h3 {
+  text-align: center;
+  font-size: 20px;
 }
-img{
-    padding: 10px;
+img {
+  padding: 10px;
 }
-#pruebas{
+#pruebas {
   width: 200px;
 }
-.img-github{
-    padding-top: 70px;
-    margin-top: 40px;
+.img-github {
+  padding-top: 70px;
+  margin-top: 40px;
 }
