--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,15 @@ section {
   padding-top: 40px;
   margin-bottom: 40px;
 }
+#paquetead{
+  display: flex;
+  justify-content: end;
+  align-items: end; 
+  margin-left: 70px;
+}
+#progra{
+ display: flex;
+}
 #informacion {
   padding-top: 80px;
 }
