--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,17 @@ section {
   align-items: end; 
   margin-left: 70px;
 }
+#cartas{
+  transition-property: box-shadow, transform;
+  transition-duration: 350ms;
+  transition-timing-function: ease;
+
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.24);
+}
+#cartas:hover{
+  box-shadow: 0px 8px 10px 1px rgba(0, 0, 0, 0.2);
+  transform: translateY(-8px);
+}
 #paqueteadobe{
 padding-bottom: 40px;
 }
