--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@
 body {
   background-color: white;
 }
+header{
+  background-color: black;
+}
 h1 {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -13,7 +16,6 @@ h1 {
   font-size: 40px;
   color: black;
   padding: 30px;
-  background-color: black;
 }
 h3 {
   text-align: center;
@@ -32,18 +34,21 @@ h3 {
 nav {
   display: flex;
   justify-content: center;
+  align-items: center;
   padding: 0px;
-  text-decoration: none;
-  list-style: none;
-  background-color: gainsboro;
   margin: 0px;
 }
-#navbarNavAltMarkup {
-  color: white;
+nav ul{
+  padding: 8px;
+  margin: 0px;
 }
-#carouselExample {
-  margin: 30px;
-  padding: 30px;
+nav ul li{
+  display: inline-flex;
+  color: white;
+  list-style: none;
+  margin: 10px auto;
+  padding: 0px 20px 0px 20px;
+  text-align: center;
 }
 .card {
   display: flex;
