--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,15 @@ nav ul li{
   padding: 0px 20px 0px 20px;
   text-align: center;
 }
+nav ul li a{
+  text-decoration: none;
+  color: white;   
+  transition: ease;
+  transition-duration: 400ms 
+}
+nav ul li a:hover{
+  color: #0d6efd;
+}
 .card {
   display: flex;
   align-items: baseline;
